# Windrose-Save-Editor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GUIDE.md  Item ID Database.html  README.md  README.txt  Requirements.txt  Windrose Save Editor.py  _GUIDE.txt  pyproject.toml  windrose.spec  windrose_save_editor.py  windrose_save_editor2.py
.github/workflows/: ci.yml  release-exe.yml
OPTIONAL/: IGNORE.html  fmodel_export.txt  parse_items.py
scripts/: build-exe.sh  build-release.sh
tests/: test_bson.py  test_crc.py  test_editors.py  test_gui_treasure_theme.py  test_inventory.py
windrose_save_editor/: __init__.py  __main__.py  cli.py  crc.py  game_data.py  process.py
windrose_save_editor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
windrose_save_editor/bson/: parser.py  serializer.py  types.py
windrose_save_editor/editors/: __init__.py  rarity.py  skills.py  stats.py  utilities.py
windrose_save_editor/gui/: app.py  gui_save.py  icons.py  main_window.py  save_loader.py  style.py
windrose_save_editor/gui/tabs/: dashboard.py  inventory_tab.py  skills_tab.py
windrose_save_editor/icons/R5/Content/UI/META/Discovery/Assets/: T_DiscoverItem_Slot_Glow_M.hdr
windrose_save_editor/inventory/: __init__.py  reader.py  writer.py
windrose_save_editor/locres/: Game.locres  NonLocalized.locres
windrose_save_editor/rocksdb/: __init__.py  manifest.py  sst.py  wal.py
windrose_save_editor/save/: __init__.py  backup.py  commit.py  item_db.py  location.py
(+3 files in other folders)
